Replace text appearances with ones from Core
MAILAND-1401

--- a/app/src/main/res/layout/fragment_manage_labels_action_sheet.xml
+++ b/app/src/main/res/layout/fragment_manage_labels_action_sheet.xml
@@ -60,7 +60,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/send_to_archive"
-                    android:textAppearance="@style/Text.Default"
+                    android:textAppearance="@style/Proton.Text.Default"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
