--- a/app/src/main/res/layout/layout_message_details_actions_sheet_buttons.xml
+++ b/app/src/main/res/layout/layout_message_details_actions_sheet_buttons.xml
@@ -37,7 +37,7 @@
         android:gravity="center"
         android:padding="@dimen/padding_l"
         android:text="@string/reply"
-        android:textAppearance="@style/Text.Default"
+        android:textAppearance="@style/Proton.Text.Default"
         android:textColor="@color/cornflower_blue"
         app:drawableTint="@color/cornflower_blue"
         app:drawableTopCompat="@drawable/ic_reply"
@@ -59,7 +59,7 @@
         android:gravity="center"
         android:padding="@dimen/padding_l"
         android:text="@string/reply_all"
-        android:textAppearance="@style/Text.Default"
+        android:textAppearance="@style/Proton.Text.Default"
         android:textColor="@color/cornflower_blue"
         app:drawableTint="@color/cornflower_blue"
         app:drawableTopCompat="@drawable/ic_reply_all"
@@ -81,7 +81,7 @@
         android:gravity="center"
         android:padding="@dimen/padding_l"
         android:text="@string/forward"
-        android:textAppearance="@style/Text.Default"
+        android:textAppearance="@style/Proton.Text.Default"
         android:textColor="@color/cornflower_blue"
         app:drawableTint="@color/cornflower_blue"
         app:drawableTopCompat="@drawable/ic_forward"
