--- a/app/src/main/res/layout/layout_message_details_activity_toolbar.xml
+++ b/app/src/main/res/layout/layout_message_details_activity_toolbar.xml
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:ellipsize="end"
-                android:textAppearance="@style/Text.DefaultSmall.Medium"
+                android:textAppearance="@style/Proton.Text.DefaultSmall.Medium"
                 android:layout_marginEnd="@dimen/padding_xxl"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/starToggleButton"
@@ -78,7 +78,7 @@
         android:layout_marginBottom="@dimen/expanded_toolbar_title_margin_bottom"
         android:paddingHorizontal="@dimen/expanded_toolbar_title_padding_horizontal"
         android:textAlignment="center"
-        android:textAppearance="@style/Text.Headline"
+        android:textAppearance="@style/Proton.Text.Headline"
         app:layout_collapseMode="parallax"
         app:layout_collapseParallaxMultiplier="0.3"
         tools:text="@tools:sample/lorem" />
