--- a/app/src/main/res/layout/fragment_message_details_action_sheet.xml
+++ b/app/src/main/res/layout/fragment_message_details_action_sheet.xml
@@ -23,7 +23,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ch.protonmail.android.activities.messageDetails.actionsheet.ActionSheetHeader
+    <ch.protonmail.android.ui.dialog.ActionSheetHeader
         android:id="@+id/action_sheet_header_details_actions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
