Design ProtonSideDrawer.kt with V4 UI
MAILAND-1400

--- a/app/src/main/res/drawable/ic_bug.xml
+++ b/app/src/main/res/drawable/ic_bug.xml
@@ -23,7 +23,11 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M3,10.5V4.5H21V10.5H19.5V22.5H4.5V10.5H3ZM6,21H18V10.5H6V21ZM19.5,9H4.5V6H19.5V9ZM13.5,13.5H15V16.5H9V13.5H10.5V15H13.5V13.5Z"
+      android:pathData="M18,7.5C17.8508,5.7312 16.6758,4.2154 15,3.63V1.5H13.5V3.165C12.5121,2.945 11.4879,2.945 10.5,3.165V1.5H9V3.63C7.3243,4.2154 6.1492,5.7312 6,7.5V9H18V7.5ZM7.5,7.5C7.5,5.88 9.555,4.5 12,4.5C14.445,4.5 16.5,5.88 16.5,7.5H7.5Z"
+      android:fillColor="#ffffff"
+      android:fillType="evenOdd"/>
+  <path
+      android:pathData="M21,13.5V12H18V10.5H6V12H3V13.5H6V16.5H3V18H6.375C6.7639,18.7776 7.3611,19.4319 8.1,19.89L6.84,22.14L8.16,22.86L9.45,20.55C11.0978,21.1457 12.9022,21.1457 14.55,20.55L15.84,22.86L17.16,22.14L15.9,19.89C16.6389,19.4319 17.2361,18.7776 17.625,18H21V16.5H18V13.5H21ZM16.5,16.5C16.5,18.12 14.445,19.5 12,19.5C9.555,19.5 7.5,18.12 7.5,16.5V12H16.5V16.5Z"
       android:fillColor="#ffffff"
       android:fillType="evenOdd"/>
 </vector>
