--- a/app/src/main/res/drawable/ic_drafts.xml
+++ b/app/src/main/res/drawable/ic_drafts.xml
@@ -23,7 +23,16 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M3,10.5V4.5H21V10.5H19.5V22.5H4.5V10.5H3ZM6,21H18V10.5H6V21ZM19.5,9H4.5V6H19.5V9ZM13.5,13.5H15V16.5H9V13.5H10.5V15H13.5V13.5Z"
+      android:pathData="M12,9H7.5V10.5H12V9Z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M12,18H7.5V19.5H12V18Z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M7.5,12H16.5V13.5H7.5V12Z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M18.1917,6.0438C18.525,6.376 18.8785,6.7285 19.275,7.125L19.5,7.335V22.5H4.5V3H15.165L15.39,3.225C16.4935,4.3506 17.2642,5.119 18.1917,6.0438ZM17.535,7.5L15,4.965V7.5H17.535ZM18,9V21H6V4.5H13.5V9H18Z"
       android:fillColor="#ffffff"
       android:fillType="evenOdd"/>
 </vector>
