--- a/app/src/main/res/drawable/ic_envelope_all_emails.xml
+++ b/app/src/main/res/drawable/ic_envelope_all_emails.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
@@ -18,8 +17,19 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<View
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="@color/nav_view_divider" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M16.5,3H7.5V4.5H16.5V3Z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M4.5,6H19.5V7.5H4.5V6Z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M3,9V22.5H21V9H3ZM4.5,21V12.45L12,17.505L19.5,12.45V21H4.5ZM12,15.705L19.5,10.635V10.5H4.5V10.635L12,15.705Z"
+      android:fillColor="#ffffff"
+      android:fillType="evenOdd"/>
+</vector>
