--- a/app/src/main/res/drawable/ic_paper_plane.xml
+++ b/app/src/main/res/drawable/ic_paper_plane.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
@@ -18,8 +17,13 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<View
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="@color/nav_view_divider" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M0.375,9.42L9.525,13.995L14.1,23.145L22.11,1.41L0.375,9.42ZM4.155,9.63L17.895,4.5L9.93,12.525L4.155,9.63ZM13.89,19.38L10.995,13.59L18.96,5.625L13.89,19.38Z"
+      android:fillColor="#ffffff"
+      android:fillType="evenOdd"/>
+</vector>
