--- a/app/src/main/res/drawable/ic_pencil.xml
+++ b/app/src/main/res/drawable/ic_pencil.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
@@ -18,8 +17,13 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<View
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="@color/nav_view_divider" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M16.8916,3.0001L21.8904,8.004L9.1101,20.7771L3,21.8896L4.1115,15.7729L16.8916,3.0001ZM16.8907,5.1853L14.7488,7.326L17.5638,10.1438L19.7057,8.0031L16.8907,5.1853ZM6.0422,16.0276L13.656,8.4182L16.471,11.236L8.8572,18.8455L6.0422,16.0276ZM5.3614,17.5322L4.9186,19.9692L7.3531,19.5259L5.3614,17.5322Z"
+      android:fillColor="#ffffff"
+      android:fillType="evenOdd"/>
+</vector>
