--- a/app/src/main/res/drawable/ic_sliders_two.xml
+++ b/app/src/main/res/drawable/ic_sliders_two.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
@@ -18,8 +17,23 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<View
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="@color/nav_view_divider" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M12,10.5H4.5V7.5H1.5V6H4.5V3H12V10.5ZM6,4.5V9H10.5V4.5H6Z"
+      android:fillColor="#ffffff"
+      android:fillType="evenOdd"/>
+  <path
+      android:pathData="M22.5,6H13.5V7.5H22.5V6Z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M1.5,16.5V18H10.5V16.5H1.5Z"
+      android:fillColor="#ffffff"/>
+  <path
+      android:pathData="M19.5,13.5H12V21H19.5V18H22.5V16.5H19.5V13.5ZM18,15V19.5H13.5V15H18Z"
+      android:fillColor="#ffffff"
+      android:fillType="evenOdd"/>
+</vector>
