--- a/app/src/main/res/drawable/ic_trash.xml
+++ b/app/src/main/res/drawable/ic_trash.xml
@@ -20,16 +20,16 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="16"
-    android:viewportHeight="16">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M6,7H7V12H6V7Z"
-      android:fillColor="@color/icon_norm"/>
+      android:pathData="M9,10.5H10.5V18H9V10.5Z"
+      android:fillColor="#ffffff"/>
   <path
-      android:pathData="M9,7H10V12H9V7Z"
-      android:fillColor="@color/icon_norm"/>
+      android:pathData="M13.5,10.5H15V18H13.5V10.5Z"
+      android:fillColor="#ffffff"/>
   <path
-      android:pathData="M11,4H15V5H13V15H3V5H1V4H5V2H11V4ZM10,3H6V4H10V3ZM12,14H4V5H12V14Z"
-      android:fillColor="@color/icon_norm"
+      android:pathData="M16.5,6H22.5V7.5H19.5V22.5H4.5V7.5H1.5V6H7.5V3H16.5V6ZM15,4.5H9V6H15V4.5ZM18,21H6V7.5H18V21Z"
+      android:fillColor="#ffffff"
       android:fillType="evenOdd"/>
 </vector>
