--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,24 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-Copyright (c) 2020 Proton Technologies AG
-
-This file is part of ProtonMail.
-
-ProtonMail is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-ProtonMail is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with ProtonMail. If not, see https://www.gnu.org/licenses/.
--->
+  ~ Copyright (c) 2020 Proton Technologies AG
+  ~
+  ~ This file is part of ProtonMail.
+  ~
+  ~ ProtonMail is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ ProtonMail is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
+  -->
 <resources>
 
+    <!-- region V4 -->
+
+    <color name="background">#E5E5E5</color>
+
+    <!-- Brand -->
+    <color name="brand">#657EE4</color>
+    <color name="brand_darken_40">#3C4B88</color>
+
+    <!-- Text -->
+    <color name="text_norm">#17181C</color>
+    <color name="text_weak">#9CA0AA</color>
+
+    <!-- endregion -->
+
+    <!-- region V3 -->
     <color name="colorPrimary">#4F4F60</color>
     <color name="colorPrimaryDark">#333341</color>
     <color name="colorAccent">#9199cb</color>
@@ -188,5 +203,6 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <color name="selectable_color">#e7e5fb</color>
 
     <color name="hyperlink_color">#0000EE</color>
+    <!-- endregion -->
 
 </resources>
