Improve Ui for very long usernames in layout_drawer_header.xml
MAILAND-1400

--- a/app/src/main/res/layout/layout_drawer_header.xml
+++ b/app/src/main/res/layout/layout_drawer_header.xml
@@ -51,6 +51,8 @@
         android:layout_marginStart="@dimen/padding_l"
         android:textAppearance="@style/Proton.Text.DefaultSmall"
         android:textColor="@color/text_inverted"
+        android:maxLines="1"
+        android:ellipsize="end"
         app:layout_constraintBottom_toTopOf="@+id/drawer_header_email_text_view"
         app:layout_constraintEnd_toStartOf="@id/drawer_header_chevron"
         app:layout_constraintHorizontal_bias="0.5"
@@ -66,6 +68,8 @@
         android:layout_marginStart="@dimen/padding_l"
         android:textAppearance="@style/Proton.Text.Caption"
         android:textColor="@color/text_weak"
+        android:maxLines="2"
+        android:ellipsize="end"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/drawer_header_chevron"
         app:layout_constraintHorizontal_bias="0.5"
@@ -79,7 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/padding_l"
         android:src="@drawable/ic_chevron_down"
-        android:tint="@color/text_inverted"
+        app:tint="@color/text_inverted"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
