--- a/app/src/main/res/layout/layout_message_details_header.xml
+++ b/app/src/main/res/layout/layout_message_details_header.xml
@@ -108,9 +108,9 @@
 
     <ImageView
         android:id="@+id/expandCollapseChevronImageView"
-        android:layout_width="@dimen/message_details_header_small_icon_size"
-        android:layout_height="@dimen/message_details_header_small_icon_size"
-        android:layout_marginTop="@dimen/message_details_header_margin_normal"
+        android:layout_width="@dimen/message_details_header_chevron_icon_size"
+        android:layout_height="@dimen/message_details_header_chevron_icon_size"
+        android:padding="@dimen/message_details_header_chevron_icon_padding"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timeDateTextView"
         android:src="@drawable/ic_chevron_down"
