--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,23 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-Copyright (c) 2020 Proton Technologies AG
-
-This file is part of ProtonMail.
-
-ProtonMail is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-ProtonMail is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with ProtonMail. If not, see https://www.gnu.org/licenses/.
--->
+  ~ Copyright (c) 2020 Proton Technologies AG
+  ~
+  ~ This file is part of ProtonMail.
+  ~
+  ~ ProtonMail is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ ProtonMail is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
+  -->
 <resources>
+
+    <!-- region V4 -->
+    <declare-styleable name="LabelChipView">
+        <attr name="labelColor" format="color"/>
+    </declare-styleable>
+    <!-- endregion -->
+
+    <!-- region V3 -->
     <attr name="fontName" format="string" />
     <attr name="keyValue" format="string" />
     <declare-styleable name="ScrimInsetsView">
@@ -43,7 +51,6 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <declare-styleable name="LoadContentButton">
         <attr name="text" format="string" />
     </declare-styleable>
-
 
     <declare-styleable name="SquareFloatingButtonView">
         <attr name="fabType" format="enum">
@@ -121,5 +128,6 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         <attr name="hasValue" format="boolean" />
         <attr name="settingsHint" format="string" />
     </declare-styleable>
+    <!-- endregion -->
 
 </resources>
