--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -133,7 +133,7 @@
         <item name="android:windowDisablePreview">true</item>
     </style>
 
-    <style name="AppTheme" parent="AppTheme.Base" />
+    <style name="AppTheme" parent="ProtonTheme" />
 
     <style name="AppTheme.Immersive" parent="AppTheme.Base">
         <item name="windowNoTitle">true</item>
