--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,6 +44,13 @@
         <item name="android:textColor">@color/text_inverted</item>
     </style>
 
+    <style name="ProtonInput" />
+
+    <style name="ProtonInput.Plain">
+        <item name="android:background">@null</item>
+        <item name="android:inputType">text|textNoSuggestions|textMultiLine</item>
+    </style>
+
     <!-- region Drawer -->
     <style name="DrawerItemNotification">
         <item name="android:textColor">@color/white</item>
