--- a/app/src/main/res/layout/activity_compose_message_2.xml
+++ b/app/src/main/res/layout/activity_compose_message_2.xml
@@ -17,7 +17,7 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -25,30 +25,79 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:orientation="vertical"
+    android:animateLayoutChanges="true"
     tools:context=".activities.composeMessage.ComposeMessageActivity">
 
     <!-- Toolbar -->
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar"/>
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/composer_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="?attr/actionBarSize"
+        app:title=" "
+        app:navigationIcon="@drawable/ic_close"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <!-- No Connectivity -->
     <FrameLayout
         android:id="@+id/layout_no_connectivity_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/composer_toolbar"
+        app:layout_constraintStart_toStartOf="parent"
         tools:visibility="visible"/>
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
+    <!-- Progress -->
+    <FrameLayout
+        android:id="@+id/composer_progress_layout"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        app:layout_constraintTop_toBottomOf="@id/composer_toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:elevation="99dp"
+        android:background="@color/white_55"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true" />
+
+    </FrameLayout>
+
+    <!-- Screen Protector -->
+    <View
+        android:id="@+id/screenProtectorView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@android:color/transparent"
+        android:clickable="true"
+        android:focusable="true"
+        tools:visibility="gone"/>
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/composer_scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintVertical_bias="0"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintTop_toBottomOf="@id/layout_no_connectivity_info"
+        app:layout_constraintBottom_toTopOf="@id/composer_buttons_layout"
         android:fillViewport="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:animateLayoutChanges="true">
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/composer_fields_start_guideline"
@@ -297,7 +346,7 @@
 
             <!-- Quoted Message -->
             <FrameLayout
-                android:id="@+id/composer_quoted_message_web_view"
+                android:id="@+id/composer_quoted_message_container"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 app:layout_constraintStart_toStartOf="@id/composer_body_start_guideline"
@@ -318,23 +367,9 @@
                 android:layout_height="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="@id/composer_quoted_message_web_view"
+                app:layout_constraintBottom_toBottomOf="@id/composer_quoted_message_container"
                 android:background="@android:color/transparent"
                 android:visibility="gone" />
-
-            <!-- Screen Protector -->
-            <View
-                android:id="@+id/screenProtectorView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:background="@android:color/transparent"
-                android:clickable="true"
-                android:focusable="true"
-                tools:visibility="gone"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -343,10 +378,15 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/divider_size"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/composer_buttons_layout"
         android:background="@color/message_divider_gray"/>
 
     <!-- Buttons TODO -->
     <RelativeLayout
+        android:id="@+id/composer_buttons_layout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_composer_field">
 
@@ -434,4 +474,4 @@
     </RelativeLayout>
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
